ansible_scripts/roles/install_apps/edgenius/variable-api/files/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: variableapi
  namespace: edgenius
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: variableapi
