ansible_scripts/roles/install_apps/edgenius/variable-api/files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: variableapi
  namespace: edgenius
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
        - path: /variableapi(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: variableapi
              port:
                number: 80
